--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua
         </p>
-        <li><a href=""><i class="fi-telephone"></i> +1-543-123-4567</a></li>
-        <li><a href=""><i class="fi-at-sign"></i> example@huddle.com</a></li>
+        <li><a href="#"><i class="fi-telephone"></i> +1-543-123-4567</a></li>
+        <li><a href="#"><i class="fi-at-sign"></i> example@huddle.com</a></li>
       </div>
       <div class="w-1/4 pr-4">
         <li><a href="#">About Us</a></li>
@@ -93,9 +93,9 @@
         <li><a href="#">FAQ</a></li>
       </div>
       <div class="w-1/4 pr-4">
-        <li><a href="">Career</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Contact Us</a></li>
+        <li><a href="#">Career</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact Us</a></li>
       </div>
       <div class="w-1/4 pr-4">
         <p class="social-icons">
