--- a/index.html
+++ b/index.html
@@ -84,24 +84,30 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua
         </p>
-        <li><a href="#"><i class="fi-telephone"></i> +1-543-123-4567</a></li>
-        <li><a href="#"><i class="fi-at-sign"></i> example@huddle.com</a></li>
+        <ul>
+          <li><a href="https://ravilamkoti.codes"><i class="fi-telephone"></i> +1-543-123-4567</a></li>
+          <li><a href="https://ravilamkoti.codes"><i class="fi-at-sign"></i> example@huddle.com</a></li>
+        </ul>
       </div>
       <div class="w-1/4 pr-4">
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">What We Do</a></li>
-        <li><a href="#">FAQ</a></li>
+        <ul>
+          <li><a href="https://ravilamkoti.codes">About Us</a></li>
+          <li><a href="https://ravilamkoti.codes">What We Do</a></li>
+          <li><a href="https://ravilamkoti.codes">FAQ</a></li>
+        </ul>
       </div>
       <div class="w-1/4 pr-4">
-        <li><a href="#">Career</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <ul>
+          <li><a href="https://ravilamkoti.codes">Career</a></li>
+          <li><a href="https://ravilamkoti.codes">Blog</a></li>
+          <li><a href="https://ravilamkoti.codes">Contact Us</a></li>
+        </ul>
       </div>
       <div class="w-1/4 pr-4">
         <p class="social-icons">
-          <a class="pr-2" href='#'><i class="fi-social-facebook"></i></a>
-          <a class="pr-2" href='#'><i class="fi-social-github"></i></a>
-          <a class="pr-2" href='#'><i class="fi-social-twitter"></i></a>
+          <a class="pr-2" href='https://ravilamkoti.codes'><i class="fi-social-facebook"></i></a>
+          <a class="pr-2" href='https://ravilamkoti.codes'><i class="fi-social-github"></i></a>
+          <a class="pr-2" href='https://ravilamkoti.codes'><i class="fi-social-twitter"></i></a>
         </p>
         <p class="text-right">
           &copy; Copyright 2018 Huddle. All rights reserved.
@@ -114,7 +120,7 @@
   <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://ravilamkoti.codes">Your Name Here</a>.
     </p>
   </footer> -->
 </body>
