--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
       </div>
       <div class="w-1/4 pr-4">
         <p class="social-icons">
-          <a class="pr-2" href='https://ravilamkoti.codes'><i class="fi-social-facebook"></i></a>
-          <a class="pr-2" href='https://ravilamkoti.codes'><i class="fi-social-github"></i></a>
-          <a class="pr-2" href='https://ravilamkoti.codes'><i class="fi-social-twitter"></i></a>
+          <a class="pr-2" href='https://ravilamkoti.codes'><i class="fi-social-facebook"></i> <i class="sr-only">facebook</i></a>
+          <a class="pr-2" href='https://ravilamkoti.codes'><i class="fi-social-github"></i> <i class="sr-only">github</i></a>
+          <a class="pr-2" href='https://ravilamkoti.codes'><i class="fi-social-twitter"></i> <i class="sr-only">twitter</i></a>
         </p>
         <p class="text-right">
           &copy; Copyright 2018 Huddle. All rights reserved.
